--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^16.18.98",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
@@ -56,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/locomotive-scroll": "^4.1.3",
     "@types/react-vertical-timeline-component": "^3.3.6",
     "gh-pages": "^6.2.0"
   }
